# parallel_project

./: CMakeLists.txt  README.md  interpolation_cpu.cpp  interpolation_cpu.h  interpolation_gpu.cpp  interpolation_gpu.h  kernel.cl  main.cpp  ocl_macros.h  utils.cpp  utils.h
kernel/: BiLinear.cl
